--- a/styles/index.css
+++ b/styles/index.css
@@ -335,6 +335,9 @@ p {
 .section-col-anim {
   margin: 100px 60px;
 }
+.section-col-anim h2 {
+  margin-bottom: 35px;
+}
 
 .collection-content {
   display: grid;
@@ -347,7 +350,7 @@ p {
   grid-area: img;
   -o-object-fit: cover;
      object-fit: cover;
-  width: 100%;
+  width: 80%;
 }
 .collection-content .btn-container {
   align-self: flex-end;
@@ -359,7 +362,7 @@ p {
 }
 .collection-content .collection-txt {
   margin-left: 50px;
-  width: 80%;
+  width: 100%;
   align-items: center;
   grid-area: txt;
 }
@@ -378,17 +381,15 @@ p {
   grid-area: img;
   -o-object-fit: cover;
      object-fit: cover;
-  width: 100%;
+  width: 80%;
 }
 .animations .animations-content .btn-container {
   align-self: flex-end;
   grid-area: txt;
   align-items: baseline;
-  margin-left: 50px;
 }
 .animations .animations-content .animation-txt {
-  margin-left: 50px;
-  width: 80%;
+  width: 100%;
   align-items: center;
   grid-area: txt;
 }
@@ -691,4 +692,16 @@ footer .under-footer ul li {
 }
 .evenements .events-container .events .button {
   width: 150px;
+}
+
+@media screen and (max-width: 600px) {
+  .evenements .events-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .evenements .events-container .events .img-container img {
+    width: 100%;
+    height: 100%;
+  }
 }/*# sourceMappingURL=index.css.map */
