--- a/styles/index.css
+++ b/styles/index.css
@@ -213,21 +213,11 @@ header .header-content .header-content-txt i {
   padding-top: 100px;
 }
 .section-infos h2 {
-  font-family: librebaskerville-bold, serif;
-  font-size: 64px;
-  font-weight: bold;
   color: #ffffff;
-  position: relative;
   margin-bottom: 100px;
 }
 .section-infos h2:after {
-  position: absolute;
-  content: "";
   background: #ffffff;
-  height: 3px;
-  bottom: -10px;
-  left: 0;
-  width: 8%;
 }
 .section-infos .tarifs-horaires {
   display: flex;
@@ -239,9 +229,6 @@ header .header-content .header-content-txt i {
   width: 150px;
 }
 .section-infos .tarifs-horaires p {
-  font-family: satoshi-regular, sans-serif;
-  font-size: 26px;
-  font-weight: normal;
   color: #ffffff;
   line-height: 35px;
 }
@@ -249,10 +236,6 @@ header .header-content .header-content-txt i {
   font-weight: bold;
 }
 .section-infos .tarifs-horaires h3 {
-  margin-bottom: 50px;
-  font-family: librebaskerville-bold, serif;
-  font-size: 44px;
-  font-weight: bold;
   color: #ffffff;
 }
 .section-infos .tarifs-horaires h3:after {
@@ -288,6 +271,23 @@ header .header-content .header-content-txt i {
   margin-bottom: 70px;
 }
 
+@media screen and (max-width: 600px) {
+  .section-infos .tarifs-horaires {
+    flex-direction: column;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+  .section-infos .tarifs-horaires .tarifs {
+    margin-right: 0px;
+    width: 100%;
+    margin-bottom: 70px;
+  }
+  .section-infos .tarifs-horaires .horaires {
+    width: 100%;
+  }
+}
 .section-confiance {
   padding: 0 60px;
   margin-top: 150px;
@@ -576,7 +576,7 @@ footer .footer-content .footer-right .follow ul {
   justify-content: space-between;
 }
 footer .footer-content .footer-right .follow ul i {
-  font-size: 4rem;
+  font-size: 2rem;
   padding-right: 60px;
 }
 footer .footer-content .footer-right .join-us {
@@ -600,6 +600,26 @@ footer .under-footer ul li {
   border-bottom: 1px solid #ffffff;
 }
 
+@media screen and (max-width: 767px) {
+  .footer-left-top {
+    display: flex;
+    flex-direction: column;
+  }
+  .follow {
+    display: flex;
+    flex-direction: column;
+  }
+  .follow ul {
+    display: flex;
+    flex-direction: column;
+  }
+  .follow ul li i {
+    margin: 10px 0;
+  }
+  .under-footer ul li {
+    font-size: 10px;
+  }
+}
 .section-acces {
   margin: 100px 60px 50px 60px;
 }
@@ -626,13 +646,42 @@ footer .under-footer ul li {
   font-size: 2.5rem;
   margin-left: 70px;
 }
-.section-acces .grid-acces iframe {
+.section-acces .grid-acces .maps-content {
   grid-area: map;
-  width: 80%;
   margin: 0 auto;
+  width: 80%;
+}
+.section-acces .grid-acces .maps-content iframe {
   margin-bottom: 150px;
+  width: 100%;
 }
 
+@media screen and (max-width: 600px) {
+  .section-acces .grid-acces {
+    grid-template-columns: 1fr;
+    grid-template-rows: 15% 15% 65%;
+    grid-template-areas: "icons" "address" "maps";
+  }
+  .section-acces .grid-acces p {
+    grid-area: address;
+  }
+  .section-acces .grid-acces .icons ul {
+    justify-content: space-around;
+    grid-area: icons;
+  }
+  .section-acces .grid-acces .icons ul li {
+    margin-left: 0px;
+  }
+  .section-acces .grid-acces .icons img {
+    height: 0%;
+  }
+  .section-acces .grid-acces .maps-content {
+    grid-area: maps;
+  }
+  .section-acces .grid-acces .maps-content iframe {
+    width: 100%;
+  }
+}
 .section-col-association {
   margin: 100px 60px 50px 60px;
 }
