--- a/styles/layout/_infos-pratiques.scss
+++ b/styles/layout/_infos-pratiques.scss
@@ -3,19 +3,11 @@
     padding: 0 60px;
     padding-top: 100px;
     h2 {
-        @include h2;
         color: $white;
-        position: relative;
-        &:after {
-            position: absolute;
-            content: "";
-            background: $white;
-            height: 3px;
-            bottom: -10px;
-            left: 0;
-            width: 8%;
-        }
         margin-bottom: 100px;
+        &:after {
+            background: $white;
+        }
     }
     .tarifs-horaires {
         display: flex;
@@ -26,7 +18,6 @@
             width: 150px;
         }
         p {
-            @include p;
             color: $white;
             line-height: 35px;
             span {
@@ -34,8 +25,6 @@
             }
         }
         h3 {
-            margin-bottom: 50px;
-            @include h3;
             color: $white;
             &:after {
                 display: none;
@@ -73,6 +62,26 @@
             }
             .juillet {
                 margin-bottom: 70px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .section-infos {
+        .tarifs-horaires {
+            flex-direction: column;
+            justify-content: space-between;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            .tarifs {
+                margin-right: 0px;
+                width: 100%;
+                margin-bottom: 70px;
+            }
+            .horaires {
+                width: 100%;
             }
         }
     }
