--- a/styles/index.css
+++ b/styles/index.css
@@ -460,8 +460,17 @@ h2:after {
     margin-left: 0px;
   }
 }
+.galerie-container {
+  padding: 10px 60px 100px 60px;
+  background: #393e46;
+}
+
 .section-galerie {
   margin: 100px 60px 0 60px;
+}
+
+.section-galerie h3 {
+  color: #ffffff;
 }
 
 h3 {
@@ -471,7 +480,7 @@ h3 {
 h3:after {
   position: absolute;
   content: "";
-  background: #242424;
+  background: #ffffff;
   height: 3px;
   bottom: -10px;
   left: 0;
