--- a/Decouvrir/styles/index.css
+++ b/Decouvrir/styles/index.css
@@ -336,6 +336,9 @@ main h2::after {
   display: none;
 }
 
+.aston-martin {
+  height: 100vh;
+}
 .aston-martin .car-content {
   position: relative;
 }
@@ -347,12 +350,22 @@ main h2::after {
   display: grid;
   grid-template-columns: 5% 60% 35%;
   grid-template-rows: 40% 60%;
+  gap: 30px;
   grid-template-areas: "side date date" "side car txt";
+}
+.aston-martin .car-content .grid-car .h2-container {
+  grid-area: date;
+  position: relative;
 }
 .aston-martin .car-content .grid-car .h2-container h2 {
   color: #242424;
   grid-area: date;
-  font-size: 400px;
+  font-size: 40px;
+  position: absolute;
+  font-size: 500px;
+  top: -250px;
+  left: 50px;
+  z-index: -3;
 }
 .aston-martin .car-content .img-container {
   grid-area: car;
@@ -360,12 +373,61 @@ main h2::after {
 .aston-martin .car-content .img-container #aston {
   -o-object-fit: cover;
      object-fit: cover;
-  max-height: 200%;
-  width: 100%;
+  max-height: 300%;
+  width: 130%;
 }
 .aston-martin #sidebar {
   grid-area: side;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 .aston-martin .car-txt {
   grid-area: txt;
+}
+
+.mustang {
+  height: 100vh;
+}
+.mustang .car-txt {
+  grid-area: txt;
+}
+.mustang .car-content {
+  position: relative;
+}
+.mustang #sidebar {
+  grid-area: side;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  max-height: 300%;
+}
+
+.car-content .grid-car {
+  display: grid;
+  grid-template-columns: 5% 60% 35%;
+  grid-template-rows: 40% 60%;
+  grid-template-areas: "side date date" "side car txt";
+}
+.car-content .grid-car .h2-container {
+  grid-area: date;
+  position: relative;
+}
+.car-content .grid-car .h2-container h2 {
+  color: #242424;
+  grid-area: date;
+  font-size: 40px;
+  position: absolute;
+  font-size: 400px;
+  top: -200px;
+  z-index: -3;
+}
+.car-content .img-container {
+  grid-area: car;
+}
+.car-content .img-container #mustang {
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-height: 200%;
+  width: 100%;
 }/*# sourceMappingURL=index.css.map */
