--- a/Decouvrir/styles/index.css
+++ b/Decouvrir/styles/index.css
@@ -339,75 +339,31 @@ main h2::after {
 .aston-martin {
   height: 100vh;
 }
-.aston-martin .car-content {
-  position: relative;
-}
-.aston-martin .car-content h2::after {
-  display: none;
-}
-.aston-martin .car-content .grid-car {
-  margin: 200px 0;
-  display: grid;
-  grid-template-columns: 5% 60% 35%;
-  grid-template-rows: 40% 60%;
-  gap: 30px;
-  grid-template-areas: "side date date" "side car txt";
-}
-.aston-martin .car-content .grid-car .h2-container {
-  grid-area: date;
-  position: relative;
-}
-.aston-martin .car-content .grid-car .h2-container h2 {
-  color: #242424;
-  grid-area: date;
-  font-size: 40px;
-  position: absolute;
-  font-size: 500px;
-  top: -250px;
-  left: 50px;
-  z-index: -3;
-}
-.aston-martin .car-content .img-container {
-  grid-area: car;
-}
-.aston-martin .car-content .img-container #aston {
-  -o-object-fit: cover;
-     object-fit: cover;
-  max-height: 300%;
-  width: 130%;
-}
-.aston-martin #sidebar {
-  grid-area: side;
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-}
-.aston-martin .car-txt {
-  grid-area: txt;
-}
 
 .mustang {
   height: 100vh;
 }
-.mustang .car-txt {
-  grid-area: txt;
-}
-.mustang .car-content {
-  position: relative;
-}
-.mustang #sidebar {
-  grid-area: side;
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  max-height: 300%;
+
+.bmw {
+  height: 100vh;
 }
 
+.bugatti {
+  height: 100vh;
+}
+
+.car-content {
+  position: relative;
+}
 .car-content .grid-car {
+  height: 100vh;
   display: grid;
   grid-template-columns: 5% 60% 35%;
   grid-template-rows: 40% 60%;
   grid-template-areas: "side date date" "side car txt";
+}
+.car-content .grid-car .car-txt {
+  grid-area: txt;
 }
 .car-content .grid-car .h2-container {
   grid-area: date;
@@ -416,18 +372,21 @@ main h2::after {
 .car-content .grid-car .h2-container h2 {
   color: #242424;
   grid-area: date;
-  font-size: 40px;
+  top: -150px;
   position: absolute;
-  font-size: 400px;
-  top: -200px;
+  font-size: 500px;
   z-index: -3;
 }
 .car-content .img-container {
   grid-area: car;
+  position: relative;
 }
-.car-content .img-container #mustang {
+.car-content .img-container :first-child {
+  position: absolute;
+  top: -30px;
+  left: -30px;
   -o-object-fit: cover;
      object-fit: cover;
-  max-height: 200%;
-  width: 100%;
+  max-height: 350%;
+  width: 130%;
 }/*# sourceMappingURL=index.css.map */
