--- a/Decouvrir/styles/layout/_main.scss
+++ b/Decouvrir/styles/layout/_main.scss
@@ -7,78 +7,20 @@ main {
 }
 .aston-martin {
     height: 100vh;
-    .car-content {
-        position: relative;
-        h2 {
-            &::after {
-                display: none;
-            }
-        }
-    }
-    .car-content {
-        .grid-car {
-            margin: 200px 0;
-            display: grid;
-            grid-template-columns: 5% 60% 35%;
-            grid-template-rows: 40% 60%;
-            gap: 30px;
-
-            grid-template-areas:
-                "side date date"
-                "side car txt";
-            .h2-container {
-                grid-area: date;
-                position: relative;
-                h2 {
-                    color: $black;
-                    grid-area: date;
-                    font-size: 40px;
-                    position: absolute;
-                    font-size: 500px;
-                    top: -250px;
-                    left: 50px;
-
-                    z-index: -3;
-                }
-            }
-        }
-        .img-container {
-            grid-area: car;
-            #aston {
-                object-fit: cover;
-                max-height: 300%;
-                width: 130%;
-            }
-        }
-    }
-    #sidebar {
-        grid-area: side;
-        object-fit: cover;
-        width: 100%;
-    }
-
-    .car-txt {
-        grid-area: txt;
-    }
 }
-
 .mustang {
     height: 100vh;
-    .car-txt {
-        grid-area: txt;
-    }
-    .car-content {
-        position: relative;
-    }
-    #sidebar {
-        grid-area: side;
-        object-fit: cover;
-        width: 100%;
-        max-height: 300%;
-    }
+}
+.bmw {
+    height: 100vh;
+}
+.bugatti {
+    height: 100vh;
 }
 .car-content {
+    position: relative;
     .grid-car {
+        height: 100vh;
         display: grid;
         grid-template-columns: 5% 60% 35%;
         grid-template-rows: 40% 60%;
@@ -86,6 +28,9 @@ main {
         grid-template-areas:
             "side date date"
             "side car txt";
+        .car-txt {
+            grid-area: txt;
+        }
 
         .h2-container {
             grid-area: date;
@@ -93,20 +38,24 @@ main {
             h2 {
                 color: $black;
                 grid-area: date;
-                font-size: 40px;
+                top: -150px;
                 position: absolute;
-                font-size: 400px;
-                top: -200px;
+                font-size: 500px;
+
                 z-index: -3;
             }
         }
     }
     .img-container {
         grid-area: car;
-        #mustang {
+        position: relative;
+        :first-child {
+            position: absolute;
+            top: -30px;
+            left: -30px;
             object-fit: cover;
-            max-height: 200%;
-            width: 100%;
+            max-height: 350%;
+            width: 130%;
         }
     }
 }
