--- a/Decouvrir/styles/layout/_headerdisco.scss
+++ b/Decouvrir/styles/layout/_headerdisco.scss
@@ -1,5 +1,7 @@
 header {
     background: url(/assets/img/Header\ main\ page.jpg) center/cover;
+    height: 100vh;
+    // margin-bottom: 150px;
 
     .top-bar {
         background: $grey;
