--- a/Decouvrir/styles/layout/_settings.scss
+++ b/Decouvrir/styles/layout/_settings.scss
@@ -21,6 +21,10 @@ $white: #ffffff;
     padding: 0;
     box-sizing: border-box;
 }
+a {
+    color: none;
+    text-decoration: none;
+}
 .button {
     margin-top: 30px;
     background: #f6c90e;
@@ -29,10 +33,12 @@ $white: #ffffff;
     font-family: $font2;
     text-transform: uppercase;
     font-weight: 700;
-
-    &:hover {
-        cursor: pointer;
-    }
+    transition: 0.15s;
+}
+.button:hover {
+    cursor: pointer;
+    transform: scale(1.15);
+    background: $black;
 }
 @mixin h1 {
     font-family: $font1;
