--- a/styles/index.css
+++ b/styles/index.css
@@ -12,6 +12,12 @@
   box-sizing: border-box;
 }
 
+a {
+  color: none;
+  text-decoration: none;
+  color: #242424;
+}
+
 .button {
   margin-top: 30px;
   background: #f6c90e;
@@ -20,9 +26,18 @@
   font-family: satoshi-regular, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
+  transition: 0.15s;
 }
+.button i {
+  transition: 0.15s;
+}
+
 .button:hover {
   cursor: pointer;
+  transform: scale(1.05);
+}
+.button:hover i {
+  padding-left: 10px;
 }
 
 h2 {
@@ -151,12 +166,50 @@ header .nav-bar .nav-bar-container ul #button-visiter {
   font-size: 19px;
   padding: 5px 15px;
   text-transform: uppercase;
+  transition: 0.15s;
+}
+header .nav-bar .nav-bar-container ul #button-visiter:hover {
+  transform: scale(1.05);
 }
 header .nav-bar .nav-bar-container ul li {
   position: relative;
+  cursor: pointer;
 }
 header .nav-bar .nav-bar-container ul :first-child:after {
   position: absolute;
+  content: "";
+  background: #f6c90e;
+  height: 3px;
+  bottom: -10px;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%);
+}
+header .nav-bar .nav-bar-container ul :nth-child(2):hover::after {
+  position: absolute;
+  transition: 5s;
+  content: "";
+  background: #f6c90e;
+  height: 3px;
+  bottom: -10px;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%);
+}
+header .nav-bar .nav-bar-container ul :nth-child(3):hover::after {
+  position: absolute;
+  transition: 5s;
+  content: "";
+  background: #f6c90e;
+  height: 3px;
+  bottom: -10px;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%);
+}
+header .nav-bar .nav-bar-container ul :nth-child(4):hover::after {
+  position: absolute;
+  transition: 5s;
   content: "";
   background: #f6c90e;
   height: 3px;
@@ -348,10 +401,14 @@ p {
 }
 
 .section-col-anim {
-  margin: 100px 60px;
+  margin: 100px 100px;
 }
 .section-col-anim h2 {
   margin-bottom: 35px;
+}
+.section-col-anim #push-up {
+  position: fixed;
+  color: #242424;
 }
 
 .collection-content {
@@ -384,6 +441,7 @@ p {
 
 .animations {
   margin: 0;
+  margin-top: 70px;
 }
 .animations .animations-content {
   display: grid;
@@ -397,6 +455,7 @@ p {
   -o-object-fit: cover;
      object-fit: cover;
   width: 80%;
+  margin-left: 50px;
 }
 .animations .animations-content .btn-container {
   align-self: flex-end;
@@ -547,6 +606,13 @@ footer {
   background: #1e1e1e;
   color: #ffffff;
   padding: 60px 60px 0 60px;
+}
+footer li {
+  transition: 0.15s;
+}
+footer li:hover {
+  opacity: 70%;
+  cursor: pointer;
 }
 footer h4 {
   font-family: satoshi-regular, sans-serif;
@@ -713,11 +779,17 @@ footer .under-footer ul li {
   justify-content: space-between;
   align-items: center;
 }
+.section-col-association .container img {
+  width: 40%;
+}
 .section-col-association .container .association-txt {
   width: 50%;
 }
 
 @media screen and (max-width: 767px) {
+  .section-col-association .container img {
+    width: 50%;
+  }
   .container {
     display: flex;
     flex-direction: column;
@@ -760,7 +832,7 @@ footer .under-footer ul li {
   margin-bottom: 25px;
 }
 .evenements .events-container .events .button {
-  width: 150px;
+  width: 170px;
 }
 
 @media screen and (max-width: 600px) {
