--- a/styles/layout/_association.scss
+++ b/styles/layout/_association.scss
@@ -8,6 +8,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        img {
+            width: 40%;
+        }
         .association-txt {
             width: 50%;
         }
@@ -15,6 +18,9 @@
 }
 
 @media screen and (max-width: 767px) {
+    .section-col-association .container img {
+        width: 50%;
+    }
     .container {
         display: flex;
         flex-direction: column;
