--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -60,12 +60,56 @@ header {
                     font-size: 19px;
                     padding: 5px 15px;
                     text-transform: uppercase;
+                    transition: 0.15s;
+                    &:hover {
+                        transform: scale(1.05);
+                    }
                 }
                 li {
                     position: relative;
+                    cursor: pointer;
                 }
                 :first-child:after {
                     position: absolute;
+                    content: "";
+                    background: $yellow;
+                    height: 3px;
+                    bottom: -10px;
+                    left: 50%;
+                    width: 50%;
+                    transform: translateX(-50%);
+                }
+                #button-visiter {
+                }
+
+                :nth-child(2):hover::after {
+                    position: absolute;
+                    transition: 5s;
+
+                    content: "";
+                    background: $yellow;
+                    height: 3px;
+                    bottom: -10px;
+                    left: 50%;
+                    width: 50%;
+                    transform: translateX(-50%);
+                }
+                :nth-child(3):hover::after {
+                    position: absolute;
+                    transition: 5s;
+
+                    content: "";
+                    background: $yellow;
+                    height: 3px;
+                    bottom: -10px;
+                    left: 50%;
+                    width: 50%;
+                    transform: translateX(-50%);
+                }
+                :nth-child(4):hover::after {
+                    position: absolute;
+                    transition: 5s;
+
                     content: "";
                     background: $yellow;
                     height: 3px;
