--- a/styles/layout/_collection+animations.scss
+++ b/styles/layout/_collection+animations.scss
@@ -157,6 +157,7 @@ h2 {
                 width: 100%;
                 object-fit: cover;
                 height: 100%;
+                margin-left: 0px;
             }
 
             .btn-container {
