--- a/Decouvrir/styles/index.css
+++ b/Decouvrir/styles/index.css
@@ -256,6 +256,14 @@ header .top-bar .top-bar-container {
   color: #ffffff;
   padding: 5px 0;
 }
+header .top-bar .top-bar-container .open-container {
+  display: flex;
+  align-items: center;
+}
+header .top-bar .top-bar-container .open-container i {
+  color: #65ed7a;
+  margin-right: 5px;
+}
 header .top-bar .top-bar-container h5 {
   font-family: satoshi-regular, sans-serif;
   font-weight: bold;
@@ -302,12 +310,53 @@ header .nav-bar .nav-bar-container ul #button-visiter {
   font-size: 19px;
   padding: 5px 15px;
   text-transform: uppercase;
+  transition: 0.15s;
+}
+header .nav-bar .nav-bar-container ul #button-visiter:hover {
+  transform: scale(1.05);
 }
 header .nav-bar .nav-bar-container ul li {
   position: relative;
+  cursor: pointer;
 }
-header .nav-bar .nav-bar-container ul :first-child:after {
+header .nav-bar .nav-bar-container ul li a {
+  color: #ffffff;
+}
+header .nav-bar .nav-bar-container ul :nth-child(2):after {
   position: absolute;
+  content: "";
+  background: #f6c90e;
+  height: 3px;
+  bottom: -10px;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%);
+}
+header .nav-bar .nav-bar-container ul :nth-child(1):hover::after {
+  position: absolute;
+  transition: 5s;
+  content: "";
+  background: #f6c90e;
+  height: 3px;
+  bottom: -10px;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%);
+}
+header .nav-bar .nav-bar-container ul :nth-child(3):hover::after {
+  position: absolute;
+  transition: 5s;
+  content: "";
+  background: #f6c90e;
+  height: 3px;
+  bottom: -10px;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%);
+}
+header .nav-bar .nav-bar-container ul :nth-child(4):hover::after {
+  position: absolute;
+  transition: 5s;
   content: "";
   background: #f6c90e;
   height: 3px;
@@ -372,6 +421,27 @@ main h2::after {
   -ms-scroll-snap-type: y mandatory;
       scroll-snap-type: y mandatory;
   overflow-y: scroll;
+}
+.collection #push-up {
+  position: fixed;
+  color: #242424;
+  right: 10px;
+  bottom: 50px;
+  background: #f6c90e;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+  transition: 0.15s;
+}
+.collection #push-up:hover {
+  height: 65px;
+  width: 65px;
+}
+.collection #push-up i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .collection::-webkit-scrollbar {
   display: none;
