--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "satoshi-regular";
   src: url(/assets/fonts/satoshi-regular-webfont.woff) url(/assets/fonts/satoshi-regular-webfont.woff2);
@@ -115,6 +116,14 @@ header .top-bar .top-bar-container {
   color: #ffffff;
   padding: 5px 0;
 }
+header .top-bar .top-bar-container .open-container {
+  display: flex;
+  align-items: center;
+}
+header .top-bar .top-bar-container .open-container i {
+  color: #65ed7a;
+  margin-right: 5px;
+}
 header .top-bar .top-bar-container h5 {
   font-family: satoshi-regular, sans-serif;
   font-weight: bold;
@@ -131,13 +140,40 @@ header .top-bar .top-bar-container ul li {
 }
 header .nav-bar {
   background: transparent;
-  margin-top: 50px;
+  position: fixed;
+  top: 50px;
+  left: 0;
+  right: 0;
+  transition: top 0.5s ease-in-out;
+}
+header .nav-bar a {
+  color: #ffffff;
+}
+header .nav-bar a::after {
+  display: none;
+}
+header .nav-bar.sticky {
+  z-index: 9999;
+  top: 0;
+  box-shadow: 5px 5px 77px rgba(255, 255, 255, 0.1);
+  -webkit-box-shadow: 5px 5px 77px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 5px 5px 77px rgba(0, 0, 0, 0.1);
+}
+header .nav-bar.sticky .nav-bar-container {
+  background: white;
+  align-items: center;
+}
+header .nav-bar.sticky .nav-bar-container li,
+header .nav-bar.sticky .nav-bar-container a {
+  color: black;
 }
 header .nav-bar .nav-bar-container {
-  width: 90%;
+  width: 100%;
+  padding-left: 30px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 30% 70%;
+  height: 70px;
 }
 header .nav-bar .nav-bar-container img {
   justify-content: left;
@@ -153,11 +189,6 @@ header .nav-bar .nav-bar-container ul {
   color: #ffffff;
   text-transform: uppercase;
   align-items: center;
-}
-@media screen and (max-width: 600px) {
-  header .nav-bar .nav-bar-container ul {
-    display: none;
-  }
 }
 header .nav-bar .nav-bar-container ul #button-visiter {
   background: #f6c90e;
@@ -275,6 +306,102 @@ header .header-content .header-content-txt i {
   font-size: 4rem;
 }
 
+.mobile-menu {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .nav-bar {
+    margin-top: 0;
+  }
+  .nav-bar.sticky .mobile-menu {
+    background: white;
+  }
+  .nav-bar.sticky .mobile-menu a {
+    color: black;
+  }
+  header .nav-bar .nav-bar-container {
+    display: none;
+  }
+  .nav-bar .nav-bar-container .list-items li,
+.nav-bar .nav-bar-container img {
+    display: none;
+  }
+  .mobile-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .mobile-menu ul li {
+    color: white;
+    padding: 10px;
+  }
+  .mobile-menu img {
+    height: 30px;
+    margin-left: 30px;
+  }
+  .mobile-menu a {
+    text-decoration: none;
+    font-size: 55px;
+    color: white;
+  }
+  .mobile-menu {
+    display: flex;
+  }
+  /* État fermé */
+  .mobile-menu .close {
+    display: none;
+  }
+  .mobile-menu ul {
+    display: none;
+  }
+  /* État ouvert */
+  .mobile-menu:target .close {
+    display: block;
+  }
+  .mobile-menu:target .open {
+    display: none;
+    position: fixed;
+  }
+  .mobile-menu:target ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #menu .close {
+    position: fixed;
+    right: 0;
+    z-index: 9999;
+    margin-right: 30px;
+  }
+  .list-items-mobile {
+    background: #393e46;
+    color: white;
+    position: fixed;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    padding-top: 70px;
+    top: 0;
+    transition: all 0.5s ease-in-out;
+    z-index: 9998;
+    font-family: satoshi-regular, sans-serif;
+    font-family: satoshi-regular, sans-serif;
+    font-size: 26px;
+    font-weight: normal;
+  }
+  .top-bar-container ul li {
+    display: none;
+  }
+  .top-bar-container {
+    align-items: center;
+    justify-content: center;
+  }
+  .header-content .header-content-txt h5 {
+    z-index: 0;
+  }
+}
 .section-infos {
   background: #393e46;
   padding: 0 60px;
@@ -542,6 +669,7 @@ h2:after {
     -o-object-fit: cover;
        object-fit: cover;
     height: 100%;
+    margin-left: 0px;
   }
   .section-col-anim .animations-content .btn-container {
     grid-area: btn;
