--- a/styles/index.css
+++ b/styles/index.css
@@ -300,6 +300,7 @@ header .header-content .header-content-txt h1 {
   font-size: 64px;
   font-weight: bold;
   text-transform: uppercase;
+  margin-top: 100px;
   margin-bottom: 130px;
 }
 header .header-content .header-content-txt i {
@@ -931,15 +932,16 @@ footer .under-footer ul li {
   width: 50%;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 600px) {
   .section-col-association .container img {
     width: 50%;
   }
-  .container {
+  .association .container {
     display: flex;
     flex-direction: column;
+    align-items: left;
   }
-  .association-txt {
+  .association .association-txt {
     padding-left: 0;
   }
 }
