--- a/styles/layout/_association.scss
+++ b/styles/layout/_association.scss
@@ -17,16 +17,19 @@
     }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 600px) {
     .section-col-association .container img {
         width: 50%;
     }
-    .container {
-        display: flex;
-        flex-direction: column;
-    }
+    .association {
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: left;
+        }
 
-    .association-txt {
-        padding-left: 0;
+        .association-txt {
+            padding-left: 0;
+        }
     }
 }
