--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -193,6 +193,7 @@ header {
             }
             h1 {
                 @include h1;
+                margin-top: 100px;
                 margin-bottom: 130px;
             }
             i {
