--- a/Decouvrir/styles/index.scss
+++ b/Decouvrir/styles/index.scss
@@ -1,6 +1,5 @@
-@import "./layout/settings";
 @import "./layout/footer";
 @import "./layout/settings";
 @import "./layout/headerdisco";
 @import "./layout/main";
-@import "./layout/test";
+@import "./layout/auto-scroll";
